--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-fileupload": "^1.4.3",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
+    "handlebars": "^4.7.8",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "mongodb": "^6.3.0",
