--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
     "express-fileupload": "^1.4.3",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
+    "fs-extra": "^11.2.0",
     "handlebars": "^4.7.8",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "mongodb": "^6.3.0",
     "morgan": "~1.9.1",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "stripe": "^14.17.0"
   }
 }
