--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-    "version": 2,
+     "version": 2,
     "builds": [
         {
             "src": "./app.js",
@@ -8,12 +8,8 @@
     ],
     "routes": [
         {
-            "src": "/",
+            "src": "/(.*)",
             "dest": "/"
-        },
-       {
-           "src": "/admin",
-          "dest": "/"
-       }
+        }
     ]
 }
